Travis CI: Test clang-12 with -flto (with shared libraries only)

--- a/.travis.yml
+++ b/.travis.yml
@@ -221,7 +221,7 @@ jobs:
     env:
     - CC=clang-12
     - CXX=clang++-12
-    - CFLAGS_EXTRA="-O3 -D _FORTIFY_SOURCE=2 -D NO_RETRY_SIGNALS"
+    - CFLAGS_EXTRA="-O3 -flto -D _FORTIFY_SOURCE=2 -D NO_RETRY_SIGNALS"
     - CONF_OPTIONS="--enable-gc-assertions --enable-cplusplus"
   - addons:
       apt:
