Travis CI: Fix (remove) unsupported -march=native for gcc-11/arm64 (fix of commit cc3e67bb8)

--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ jobs:
     env:
     - CC=gcc-11
     - CXX=g++-11
-    - CFLAGS_EXTRA="-O3 -march=native"
+    - CFLAGS_EXTRA="-O3"
     - CONF_OPTIONS="--enable-cplusplus --disable-gcj-support"
     - NO_CLONE_LIBATOMIC_OPS=true
   - addons:
